# sync_mv

./: Cargo.toml  README.md
src/: digest.rs  main.rs
tests/: sync.rs
