[package]
name = "sync_mv"
version = "0.1.2"
edition = "2021"
authors = ["Helin Wang"]
license = "MIT"
repository = "https://github.com/helinwang/sync_mv"
documentation = "https://docs.rs/sync_mv"
description = """
Binary that generates a script containing `mkdir` and `mv` commands that moves the files in the `dst` folder to match the file structure of the `src` folder.
Run it before `rsync` to save copying files moved in the source folder.
"""

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[dev-dependencies]
assert_cmd = { version = "2.0.7" }
temp-file = { version = "0.1.7" }